--- a/content/sass/styles.scss
+++ b/content/sass/styles.scss
@@ -22,8 +22,20 @@
 		margin:30px 0;
 	}
 
-	input {
-		display: block;
-		margin: 2em 0px;
+	p {
+		margin: 2em 0;
 	}
-}
+
+	li {
+
+		list-style: none;
+		margin: 1em 0px;
+
+	}
+
+	#create {
+		float:right;
+	}
+
+
+} 
