--- a/views/create.html
+++ b/views/create.html
@@ -23,8 +23,11 @@
           <h1>{{poll.question}}</h1>
         </div>
         <div id="pollAnswers">
+     
           <ul>
-            <li <li ng-repeat="answer in poll.answers track by $index">{{answer.answer}}</li>
+            <div class="w3-progress-container" ng-repeat="answer in poll.answers track by $index">
+              <li id="myBar" class="w3-progressbar" ng-style="{'width': answer.progress + '%'}">{{answer.answer}} {{answer.score}} </li><button ng-click="vote(answer)">Vote</button>
+            </div>
           </ul>
         </div>
 
