--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -22,6 +22,15 @@
     margin: 1em 0px; }
   #pollContent form .floatRight {
     float: right; }
+  #pollContent form button, #pollContent form input {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #777;
+    border: 0;
+    box-shadow: 2px 2px 2px rgba(20, 20, 20, 0.1);
+    font-size: 16px; }
   #pollContent #create {
     float: right; }
 
@@ -41,3 +50,14 @@
         float: right; }
       #poll #pollAnswers ul li {
         margin-bottom: 1em; }
+      #poll #pollAnswers ul .w3-progress-container {
+        margin-bottom: 2em; }
+      #poll #pollAnswers ul button, #poll #pollAnswers ul input {
+        background: #fff;
+        padding: 10px;
+        border-radius: 10px;
+        cursor: pointer;
+        color: #777;
+        border: 0;
+        box-shadow: 2px 2px 2px rgba(20, 20, 20, 0.1);
+        font-size: 16px; }
