--- a/views/poll.html
+++ b/views/poll.html
@@ -2,6 +2,7 @@
         <div id="pollQuestion">
           <p>Question:</p>
           <h1>{{poll.question}}</h1>
+
         </div>
         <div id="pollAnswers">
      
@@ -14,6 +15,6 @@
           </ul>
         </div>
         <hr/>
-        <button ng-click="reload();"><i class="fa fa-arrow-left" aria-hidden="true"></i> Create New Poll</button>
+        <button ng-click="redirect('/create');"><i class="fa fa-arrow-left" aria-hidden="true"></i> Create New Poll</button>
 
       </div>
